--- a/_posts/2012-01-31-tym.textile
+++ b/_posts/2012-01-31-tym.textile
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Learning Ruby
-category: ruby
+category: coding
 tags: [programming, practice, ruby]
 ---
 {% include JB/setup %}
